fix: background color option

--- a/frontpage.html
+++ b/frontpage.html
@@ -157,7 +157,7 @@
     <main class="main frontpage">
       <div class="auxiliary"></div>
       <section class="mainGallery">
-        <img class="mainGallery__item" src="assets/img/rebra.jpg" alt="" />
+        <img class="mainGallery__item" src="assets/img/mainFrontpage.jpg" alt="" />
       </section>
       <div class="wrapper__main_big">
         <aside class="asideMenu">
