--- a/frontpage.html
+++ b/frontpage.html
@@ -46,7 +46,7 @@
   <body>
     <div class="block"></div>
     <header class="header">
-      <a class="logo" href="index.html">
+      <a class="logo" href="frontpage.html">
         <picture>
           <source srcset="assets/img/logo.svg" media="(min-width: 800px)" />
           <img
