fix: delivery price in order

--- a/template.html
+++ b/template.html
@@ -666,6 +666,16 @@
         >
       </div>
     </footer>
+    <div class="modalProfile">
+      <h2 class="profile__h2">войдите в аккаунт</h2>
+      <p class="profile__p">Введите номер телефона и мы отправим SMS-код для входа в ваккаунт</p>
+      <input type="text" class="profile__input">
+      <button class="profile__button" type="button"></button>
+      <p class="profile__agreement">Нажимая кнопку "Далее", Вы принимаете 
+        <a class="details" href=""
+          >Соглашение об условиях доставки </a
+        > и <a href="" class="details"> политику обработки персональных данных</a></p>
+    </div>
     <script src="index.js"></script>
     <script src="assets/swiper/swiper-bundle.min.js"></script>
   </body>
