fix: h2 in address and change

--- a/order.html
+++ b/order.html
@@ -314,7 +314,7 @@
                       type="button"
                       class="shortChange__item noShortChange"
                     >
-                      Без сдачи
+                      без сдачи
                     </button>
                   </div>
                 </div>
