--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/style/style.css" />
-    <link rel="stylesheet" href="assets/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="/assets/style/style.css" />
+    <link rel="stylesheet" href="/assets/swiper/swiper-bundle.min.css" />
 
     <style>
       .swiper {
@@ -41,15 +41,16 @@
     <script>
       var page = 1;
     </script>
-    <script src="dishes.js"></script>
+    <script src="/assets/js/config.js"></script>
+    <script src="/assets/js/dishes.js"></script>
     <title>GRILL VINO & ХАЧАПУРИ</title>
   </head>
   <body>
     <div class="block"></div>
     <header class="header">
-      <a class="logo" href="frontpage.html">
+      <a class="logo" href="/frontpage.html">
         <picture>
-          <source srcset="assets/img/logo.svg" media="(min-width: 800px)" />
+          <source srcset="/assets/img/logo.svg" media="(min-width: 800px)" />
           <img
             src="assets/img/mobileLogo.svg"
             alt="Логотип GRILL VINO и ХАЧАПУРИ"
@@ -58,7 +59,7 @@
         <span class="resto"> ресторан современной грузинской кухни </span>
       </a>
       <a id="openMenu" class="burgerMenu">
-        <img src="assets/img/icon_menu_burger.svg" alt="Мобильное меню" />
+        <img src="/assets/img/icon_menu_burger.svg" alt="Мобильное меню" />
       </a>
       <div class="header__nav">
         <nav class="nav">
@@ -71,7 +72,7 @@
         </nav>
         <div class="profile">
           <a href=""
-            ><img src="assets/img/iconProfile.svg" alt="" class="profile__img"
+            ><img src="/assets/img/iconProfile.svg" alt="" class="profile__img"
           /></a>
         </div>
         <div class="phone">
@@ -88,10 +89,10 @@
     <aside id="burgerMenu" class="mobile_wr">
       <div class="mobileWr__img">
         <div class="mobileWr__header_img">
-          <img src="assets/img/mobileLogo.svg" alt="" class="mobile__logo" />
+          <img src="/assets/img/mobileLogo.svg" alt="" class="mobile__logo" />
         </div>
         <img
-          src="assets/img/image_for_basket.jpg"
+          src="/assets/img/image_for_basket.jpg"
           alt=""
           class="tablet__img_main"
         />
@@ -99,13 +100,13 @@
       <div class="mobile">
         <div class="mobile__header">
           <img
-            src="assets/img/mobileLogo.svg"
+            src="/assets/img/mobileLogo.svg"
             alt=""
             class="mobile__logo logo_close"
           />
           <img
             id="closeMenu"
-            src="assets/img/close.svg"
+            src="/assets/img/close.svg"
             alt=""
             class="mobile__close"
           />
@@ -120,7 +121,9 @@
         </nav>
         <div class="mobile__profile">
           <div class="mobile__profile_img">
-            <a href=""><img src="assets/img/mobileIconProfile.svg" alt="" /></a>
+            <a href=""
+              ><img src="/assets/img/mobileIconProfile.svg" alt=""
+            /></a>
           </div>
           <span>ПРОФИЛЬ</span>
         </div>
@@ -168,7 +171,7 @@
               <span class="mobileBasket__header_span">Ваш заказ</span>
               <img
                 class="mobileBasket__close"
-                src="assets/img/close.svg"
+                src="/assets/img/close.svg"
                 alt=""
               />
               <div class="mobileBasket__header_totalPrice">
@@ -180,7 +183,7 @@
           <div class="mobileBasket__wrapper">
             <div class="mobileBasket__img">
               <img
-                src="assets/img/image_for_basket.jpg"
+                src="/assets/img/image_for_basket.jpg"
                 alt=""
                 class="tablet__img_main"
               />
@@ -242,7 +245,7 @@
               <span class="other__text"> для бесплатной доставки!</span>
             </p>
           </div>
-          <a class="mobileBasket__button_order button_order" href="order.html">
+          <a class="mobileBasket__button_order button_order" href="/order.html">
             <span>Верно, далее</span>
             <div class="mobileBasket_totalCheck">
               <span class="totalCheck"></span>
@@ -256,7 +259,7 @@
     <main class="main">
       <div class="auxiliary"></div>
       <section class="mainGallery">
-        <img class="mainGallery__item" src="assets/img/bigImg.jpg" alt="" />
+        <img class="mainGallery__item" src="/assets/img/bigImg.jpg" alt="" />
       </section>
       <div class="wrapper__main_big">
         <aside class="asideMenu">
@@ -330,7 +333,10 @@
                       <span class="other__text"> для бесплатной доставки!</span>
                     </p>
                   </div>
-                  <a class="deskBasket__button_order button_order" href="order.html">
+                  <a
+                    class="deskBasket__button_order button_order"
+                    href="/order.html"
+                  >
                     <span>Верно, далее</span>
                     <div class="deskBasket_totalCheck">
                       <span class="totalCheck"></span>
@@ -411,13 +417,13 @@
         <div class="footer__main">
           <div class="footer__logo">
             <img
-              src="assets/img/logoFooterMobile.svg"
+              src="/assets/img/logoFooterMobile.svg"
               alt=""
               class="footer__img"
             />
             <div class="footer__favicon">
-              <img src="assets/img/vk.svg" alt="" class="vk" />
-              <img src="assets/img/telegramm.svg" alt="" class="telegram" />
+              <img src="/assets/img/vk.svg" alt="" class="vk" />
+              <img src="/assets/img/telegramm.svg" alt="" class="telegram" />
             </div>
           </div>
           <ul class="footer__nav">
@@ -463,7 +469,7 @@
     </footer>
 
     <aside class="asideModal">
-      <img class="modal__close" src="assets/img/close.svg" alt="" />
+      <img class="modal__close" src="/assets/img/close.svg" alt="" />
       <div class="modal">
         <div class="modal__header">
           <div class="modal__fav"></div>
@@ -528,7 +534,7 @@
           </div>
           <button class="modal__order_button">
             <div class="modal__order_click">
-              <img src="assets/img/plus.svg" alt="" />
+              <img src="/assets/img/plus.svg" alt="" />
               <span>добавить</span>
             </div>
           </button>
@@ -553,7 +559,7 @@
     <template class="basketTemp">
       <div class="basket__card">
         <div class="basket__card_pict">
-          <img class="basket__card_img" src="assets/img/kebab.jpg" alt="" />
+          <img class="basket__card_img" src="/assets/img/kebab.jpg" alt="" />
         </div>
         <div class="basket__desc">
           <h3 class="basket__h3">
@@ -591,7 +597,7 @@
       <div class="swiper-slide">
         <div class="top10__card list_item">
           <a class="menu__card">
-            <img class="card__img" src="assets/img/kare.jpg" alt="" />
+            <img class="card__img" src="/assets/img/kare.jpg" alt="" />
             <div class="card_desc">
               <div class="card__text">
                 <div class="card">
@@ -610,7 +616,7 @@
           </a>
           <button class="card__button" type="button">
             <div class="card__button_add">
-              <img class="img__plus" src="assets/img/plus.svg" alt="" />
+              <img class="img__plus" src="/assets/img/plus.svg" alt="" />
               <span>добавить</span>
             </div>
           </button>
@@ -641,11 +647,11 @@
           ><div class="topping__check">
             <img
               class="topping__check_img"
-              src="assets/img/marker.svg"
+              src="/assets/img/marker.svg"
               alt=""
             />
           </div>
-          <img class="topping__img" src="assets/img/cheese.svg" alt="" />
+          <img class="topping__img" src="/assets/img/cheese.svg" alt="" />
           <div class="topping_desc">
             <span class="topping__name">Сыр чеддер</span>
             <div class="topping__other">
@@ -664,13 +670,13 @@
     </template>
 
     <template class="modalFavTemp">
-      <img class="modal__fav_img" src="assets/img/spicy.svg" alt="" />
+      <img class="modal__fav_img" src="/assets/img/spicy.svg" alt="" />
     </template>
 
     <template class="swiperGalleryModalTemp">
       <div class="swiper-slide">
         <a class="modal__img">
-          <img class="modal__card_img" src="assets/img/kare.jpg" alt="" />
+          <img class="modal__card_img" src="/assets/img/kare.jpg" alt="" />
         </a>
       </div>
     </template>
@@ -696,13 +702,13 @@
 
     <template class="dishesListTemp">
       <div class="menu__cat" data-name="cat1">
-        <h2  class="menu__h2">Популярные блюда</h2>
+        <h2 class="menu__h2">Популярные блюда</h2>
       </div>
     </template>
     <template class="menuCardTemp">
       <div class="menu__list_item list_item">
         <a class="menu__card">
-          <img class="card__img" src="assets/img/kare.jpg" alt="" />
+          <img class="card__img" src="/assets/img/kare.jpg" alt="" />
           <div class="card_desc">
             <div class="card__text">
               <div class="card">
@@ -721,7 +727,7 @@
         </a>
         <button class="card__button" type="button">
           <div class="card__button_add">
-            <img class="img__plus" src="assets/img/plus.svg" alt="" />
+            <img class="img__plus" src="/assets/img/plus.svg" alt="" />
             <span>добавить</span>
           </div>
         </button>
@@ -745,7 +751,7 @@
     <template class="basketTemp">
       <div class="basket__card">
         <div class="basket__card_pict">
-          <img class="basket__card_img" src="assets/img/kebab.jpg" alt="" />
+          <img class="basket__card_img" src="/assets/img/kebab.jpg" alt="" />
         </div>
         <div class="basket__desc">
           <h3 class="basket__h3">
@@ -779,8 +785,8 @@
       </div>
     </template>
 
-    <script src="index.js"></script>
-    <script src="assets/swiper/swiper-bundle.min.js"></script>
+    <script src="/assets/js/index.js"></script>
+    <script src="/assets/swiper/swiper-bundle.min.js"></script>
     <!-- Initialize Swiper -->
 
     <script>
@@ -813,7 +819,7 @@
       window.addEventListener("DOMContentLoaded", galleryFunc);
       window.addEventListener("resize", galleryFunc);
     </script>
-    <script src="assets/swiper/mobile-swipe-menu.min.js"></script>
+    <script src="/assets/swiper/mobile-swipe-menu.min.js"></script>
     <script>
       function openMobileMenu() {
         var mobileMenu = new MobileSwipeMenu("#burgerMenu", {
