feat: modal profile

--- a/index.html
+++ b/index.html
@@ -70,10 +70,8 @@
             <li class="nav__item">КОНТАКТЫ</li>
           </a>
         </nav>
-        <div class="profile">
-          <a href=""
-            ><img src="/assets/img/iconProfile.svg" alt="" class="profile__img"
-          /></a>
+        <div class="profile profile__item">
+          <img src="/assets/img/iconProfile.svg" alt="" class="profile__img" />
         </div>
         <div class="phone">
           <a class="contacts__a" href="tel:+78129362292"
@@ -119,11 +117,9 @@
             <li class="nav__item">КОНТАКТЫ</li>
           </a>
         </nav>
-        <div class="mobile__profile">
+        <div class="mobile__profile profile__item">
           <div class="mobile__profile_img">
-            <a href=""
-              ><img src="/assets/img/mobileIconProfile.svg" alt=""
-            /></a>
+            <img src="/assets/img/mobileIconProfile.svg" alt="" />
           </div>
           <span>ПРОФИЛЬ</span>
         </div>
