--- a/template.html
+++ b/template.html
@@ -64,10 +64,9 @@
             <li class="nav__item">КОНТАКТЫ</li>
           </a>
         </nav>
-        <div class="profile">
-          <a href=""
-            ><img src="assets/img/iconProfile.svg" alt="" class="profile__img"
-          /></a>
+        <div class="profile profile__item">
+          <img src="assets/img/iconProfile.svg" alt="" class="profile__img"
+          />
         </div>
         <div class="phone">
           <a class="contacts__a" href="tel:+78129362292"
@@ -670,15 +669,13 @@
       <div class="profile__main">
         <div class="profile__header">
           <h2 class="profile__h2">Войти в аккаунт</h2>
-          <img src="assets/img/closeGrey.svg" alt="" class="profile__img" />
+          <img src="/assets/img/closeGrey.svg" alt="" class="profile__close" />
         </div>
-        
-        
         <p class="profile__p">
           Введите номер телефона и мы отправим SMS-код для входа в ваккаунт
         </p>
-        <input type="text" class="profile__input" />
-        <button class="profile__button" type="button"></button>
+        <input type="text" class="profile__phone" id="profile__phone" />
+        <button class="profile__button" type="button">далее</button>
         <p class="profile__agreement">
           Нажимая кнопку "Далее", Вы принимаете
           <a class="details" href="">Соглашение об условиях доставки </a> и
@@ -686,7 +683,11 @@
         </p>
       </div>
     </div>
-    <script src="index.js"></script>
+
+
+   <!-- <script src="/assets/js/index.js"></script>-->
+   <script src="/assets/js/mask.js"></script>
+    <script src="/assets/js/profile.js"></script>
     <script src="assets/swiper/swiper-bundle.min.js"></script>
   </body>
 </html>
