--- a/template.html
+++ b/template.html
@@ -687,8 +687,8 @@
 
 
    <!-- <script src="/assets/js/index.js"></script>-->
-   <script src="/assets/js/mask.js"></script>
-    <script src="/assets/js/profile.js"></script>
-    <script src="/assets/swiper/swiper-bundle.min.js"></script>
+   <script src="assets/js/mask.js"></script>
+    <script src="assets/js/profile.js"></script>
+    <script src="assets/swiper/swiper-bundle.min.js"></script>
   </body>
 </html>
