debugging: modal profile

--- a/template.html
+++ b/template.html
@@ -670,7 +670,7 @@
       <div class="profile__main">
         <div class="profile__header">
           <h2 class="profile__h2">Войти в аккаунт</h2>
-          <img src="/assets/img/closeGrey.svg" alt="" class="profile__close" />
+          <img src="assets/img/closeGrey.svg" alt="" class="profile__close" />
         </div>
         <p class="profile__p">
           Введите номер телефона и мы отправим SMS-код для входа в ваккаунт
