fix: input extra and load scripts

--- a/frontpage.html
+++ b/frontpage.html
@@ -475,7 +475,7 @@
         </a>
       </div>
     </template>
-    <script src="/assets/js/frontpage.js"></script>
+    <!--<script src="/assets/js/frontpage.js"></script>-->
     <script src="/assets/swiper/swiper-bundle.min.js"></script>
     <!-- Initialize Swiper -->
 
