--- a/order.html
+++ b/order.html
@@ -779,7 +779,7 @@
     </template>
 
     <script src="/assets/momentjs/moment.js"></script>
-    <script src="/assets/js/order.js"></script>
+    <!--<script src="/assets/js/order.js"></script>-->
     <script src="/assets/swiper/swiper-bundle.min.js"></script>
     <script src="/assets/swiper/mobile-swipe-menu.min.js"></script>
     <script>
