--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
       </div>
     </template>
 
-    <script src="/assets/js/index.js"></script>
+    <!--<script src="/assets/js/index.js"></script>-->
     <script src="/assets/swiper/swiper-bundle.min.js"></script>
     <!-- Initialize Swiper -->
 
