--- a/template.html
+++ b/template.html
@@ -689,7 +689,7 @@
    <!-- <script src="/assets/js/index.js"></script>-->
    <script src="assets/js/mask.js"></script>
     <script src="assets/js/profile.js"></script>
-    <script src="assets/swiper/swiper-bundle.min.js"></script>
+    <!--<script src="assets/swiper/swiper-bundle.min.js"></script>
     <script>
       function openMobileMenu() {
         var mobileMenu = new MobileSwipeMenu("#burgerMenu", {
@@ -734,6 +734,6 @@
         document.getElementById("burgerMenu").style.display = "flex";
         openMobileMenu();
       });
-    </script>
+    </script>-->
   </body>
 </html>
