feat: create auth

--- a/frontpage.html
+++ b/frontpage.html
@@ -9,6 +9,7 @@
     <script>
       var page = 3;
     </script>
+    <script src="/assets/js/mask.js"></script>
     <script src="/assets/swiper/swiper-bundle.min.js"></script>
     <script src="/assets/js/config.js"></script>
     <script src="/assets/js/dishes.js"></script>
