--- a/order.html
+++ b/order.html
@@ -10,6 +10,7 @@
     <script>
       var page = 2;
     </script>
+    <script src="/assets/js/mask.js"></script>
     <script src="/assets/swiper/swiper-bundle.min.js"></script>
     <script src="/assets/js/config.js"></script>
     <script src="/assets/js/dishes.js"></script>
