feat:fetch auth

--- a/index.html
+++ b/index.html
@@ -682,9 +682,36 @@
             </div>
           </div>
         </div>
-        <p class="modal__desc">
-          Подаём с маринованным луком, коул слоу и соусом сацебели
-        </p>
+        <div class="modal__desc_full">
+          <div class="swiper mySwiperDesc">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="modal__desc_item">
+                  <p class="modal__desc"></p>
+                  <div class="button_next">
+                    <span class="modal__desc_next">состав</span>
+                    <img
+                      class="modal__desc_arrowRight"
+                      src="/assets/img/arrowRight.svg"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="modal__desc_item">
+                  <p class="modal__consist"></p>
+                  <div class="button_prev">
+                    <p class="modal__desc_next"></p>
+                    <img
+                      class="modal__desc_arrowLeft"
+                      src="/assets/img/arrowLeft.svg"
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="modal__topping">
           <h3 class="topping__h3">Топинги:</h3>
           <div class="topping__list"></div>
