fix: icon profile

--- a/order.html
+++ b/order.html
@@ -270,7 +270,7 @@
         </nav>
         <div class="mobile__profile profile__item">
           <div class="mobile__profile_img">
-            <img src="/assets/img/mobileIconProfile.svg" alt="" />
+            <img src="/assets/img/iconProfile.svg" alt="" />
           </div>
           <span>ПРОФИЛЬ</span>
         </div>
