fix: icon profile ang modal toppings

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           </a>
         </nav>
         <div class="profile profile__item">
-          <img src="/assets/img/iconProfile.svg" alt="" class="profile__img" />
+          <img src="/assets/img/Group56.svg" alt="" class="profile__img" />
         </div>
         <div class="phone">
           <a class="contacts__a" href="tel:+78129362292"
@@ -316,7 +316,7 @@
         </nav>
         <div class="mobile__profile profile__item">
           <div class="mobile__profile_img">
-            <img src="/assets/img/iconProfile.svg" alt="" />
+            <img src="/assets/img/Group56.svg" alt="" />
           </div>
           <span>ПРОФИЛЬ</span>
         </div>
