feat: profile data

--- a/order.html
+++ b/order.html
@@ -192,10 +192,8 @@
     <template class="swiperGalleryModalTemp">
       <div class="swiper-slide">
         <div class="swiper-zoom-container">
-        
           <img class="modal__card_img" src="/assets/img/kare.jpg" alt="" />
-       
-      </div>
+        </div>
       </div>
     </template>
     <div class="block"></div>
@@ -489,12 +487,11 @@
                     </button>
                   </div>
                 </div>
-                <p class="bonus__text">
-                  У вас
-                  <span class="numberBonuses"></span>
-                  доступно к списанию
-                  <span class="writeOffBonuses"></span>
-                </p>
+                <span class="bonus__text"> У вас </span>
+                <span class="numberBonuses"></span>
+                <span class="bonus__text_other"> доступно к списанию </span>
+                <span class="writeOffBonuses"></span>
+
                 <form
                   class="form__range"
                   oninput="result.value=parseInt(range.value)"
