--- a/order.html
+++ b/order.html
@@ -51,7 +51,10 @@
     <template class="optionTemp">
       <option class="street__item" value="">пр-т. Авиаторов Балтики</option>
     </template>
-
+    <template class=" selectStreetItem">
+      <div class="select__item"></div>
+    </template>
+  
     <template class="extraCardTemp">
       <div class="order__topping_card item">
         <h3 class="basket__h3">Бородинский хлеб</h3>
@@ -320,6 +323,14 @@
               <h2 class="order__item_h2">Адрес</h2>
               <div class="address">
                 <div class="address__main">
+                  <div class="select">
+                    <div class="select__header">
+                      <span class="select__current">Value 1</span>
+                    </div>                  
+                    <div class="select__body">
+                      
+                    </div>
+                  </div>
                   <select class="address__item street" name="" id=""></select>
                   <input
                     class="address__item house"
