--- a/auth.html
+++ b/auth.html
@@ -8,7 +8,7 @@
     <p class="auth__p">
       Введите номер телефона и мы отправим SMS-код для входа в ваккаунт
     </p>
-    <input type="text" class="auth__phone" id="auth__phone" />
+    <input type="tel" class="auth__phone" id="auth__phone" />
     <span class="auth__error">Введите номер телефона в указанном формате </span>
     <button class="button__forward" type="button">далее</button>
     <p class="auth__agreement">
