--- a/order.html
+++ b/order.html
@@ -54,6 +54,8 @@
     <template class=" selectStreetItem">
       <div class="select__item"></div>
     </template>
+      
+  
   
     <template class="extraCardTemp">
       <div class="order__topping_card item">
@@ -325,10 +327,9 @@
                 <div class="address__main">
                   <div class="select">
                     <div class="select__header">
-                      <span class="select__current">Value 1</span>
+                      <span class="select__current"></span>
                     </div>                  
                     <div class="select__body">
-                      
                     </div>
                   </div>
                   <select class="address__item street" name="" id=""></select>
@@ -443,6 +444,17 @@
             <div class="order__item order__payment">
               <div class="wrapper__payment">
                 <h2 class="order__item_h2">Оплата</h2>
+                <div class="paymentCardSelect">
+                  <div class="select__header">
+                    <span class="select__current"></span>
+                  </div>
+                  <div class="select__body">
+                    <div class="select__item_pay cashPay">Наличные курьеру</div>
+                    <div class="select__item_pay courierPay">Картой курьеру</div>
+                    <div class="select__item_pay restaurantPay">Наличные/картой в ресторане</div>
+                    <div class="select__item_pay onlinePay">Онлайн на сайте</div>
+                  </div>
+                </div>
                 <select name="paymentCard" id="paymentCard" class="paymentCard">
                   <option
                     class="option_item"
