feat: profile, auth, header

--- a/frontpage.html
+++ b/frontpage.html
@@ -166,8 +166,14 @@
             <li class="nav__item">КОНТАКТЫ</li>
           </a>
         </nav>
-        <div class="profile profile__item">
-          <img src="/assets/img/Group56.svg" alt="" class="profile__img" />
+        <div class="profile_wrap">
+          <div class="profile profile__item">
+            <img src="/assets/img/Group56.svg" alt="" class="profile__img" />
+          </div>
+          <div class="profileDropDown">
+            <a class="goToProfile" href="">ПРОФИЛЬ</a>
+            <div class="exitProfile" href="">ВЫХОД</div>
+          </div>
         </div>
         <div class="phone">
           <a class="contacts__a" href="tel:+78129362292"
@@ -216,7 +222,11 @@
           <div class="mobile__profile_img">
             <img src="/assets/img/Group56.svg" alt="" />
           </div>
-          <span>ПРОФИЛЬ</span>
+          <div class="profileDropDown">
+            <a class="goToProfile" href="">ПРОФИЛЬ</a>
+            <div class="exitProfile" href="">ВЫХОД</div>
+          </div>
+          <span class="enter">ВОЙТИ</span>
         </div>
         <div class="mobile__phone">
           <a class="mobileContacts__a" href="tel:+78129362292"
@@ -351,7 +361,7 @@
             <a href="">
               <li class="footer__nav_item">О нас</li>
             </a>
-            <a href="">
+            <a class="footerMenu" href="">
               <li class="footer__nav_item">Меню</li>
             </a>
             <a href="">
